--- a/omnius-cha-task-manager/package.json
+++ b/omnius-cha-task-manager/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "core-js": "^2.5.4",
+    "ngx-order-pipe": "^2.0.1",
+    "ngx-pagination": "^3.2.0",
+    "ngx-timeago": "^1.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
